# razin

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/homebrew/: update_tap_formula.py
.github/workflows/: ci.yml  docs-check.yml  docs.yml  release-homebrew-tap.yml  release-pypi.yml  smoke-scan.yml
docs/: architecture.md  ci-and-exit-codes.md  cli-reference.md  configuration.md  custom-rules.md  detectors.md  docker.md  getting-started.md  index.md  output-formats.md  troubleshooting.md
docs/adr/: 001-incremental-decomposition.md
schemas/: findings.schema.json  quiet_stream.schema.json  summary.schema.json
scripts/: check_file_sizes.py  check_release_version.py
sprints/sprint2/: README.md
src/raisin/: __init__.py  config.py
src/raisin/cli/: __init__.py  main.py
src/raisin/constants/: __init__.py  cache.py  config.py  docs.py  parsing.py  (+2 more)
src/razin/: __init__.py  config.py  validation.py
tests/: conftest.py  test_cache.py  test_cli.py  test_common.py  test_config.py  test_config_validation.py  test_detectors.py  test_discovery.py  test_dsl.py  test_integration_scan.py  test_io.py  test_orchestrator.py  test_output_formats.py  test_parser.py  test_score.py  test_stdout_reporter.py  test_yaml_detectors.py
tests/cli/: test_cli.py  test_domain_hints.py  test_fail_thresholds.py  test_init.py  test_quiet_mode.py
tests/detectors/: conftest.py  test_common.py  test_detectors.py  test_doc_surface.py  test_network.py  test_secrets_opaque.py  test_yaml_detectors.py
tests/dsl/: conftest.py  test_data_sensitivity.py  test_dsl.py  test_rule_execution.py  test_runtime.py  test_schema.py
tests/integration/: test_integration_scan.py
tests/reporting/: test_quiet_schema.py  test_schema_validation.py  test_stdout_reporter.py
tests/scanner/: test_cache.py  test_discovery.py  test_mcp_remote.py  test_orchestrator.py  test_rule_selection.py  test_score.py
(+184 files in other folders)
