[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "razin"
version = "1.0.1"
description = "Static Analysis for LLM Agent Skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
]

[project.scripts]
razin = "razin.cli.main:main"

[dependency-groups]
dev = [
  "black>=25.1.0",
  "isort>=5.13.2",
  "mypy>=1.15.0",
  "pytest>=8.3.4",
  "ruff>=0.9.6",
  "types-PyYAML>=6.0.12.20250516",
]

[tool.hatch.build.targets.wheel]
packages = ["src/razin"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
py_version = 312
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
